--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "start:prod": "rimraf dist && tsc && node dist/app.js",
+    "start:prod": "rimraf dist && tsc && node build/app.js",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
