--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "joi": "^17.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
